- Completed admin services

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,8 +3,11 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/bootstrap-material-design.min.css' />
   </head>
   <body>
     {{{body}}}
+    <script src="/javascripts/jquery.min.js"></script>
+    <script src="/javascripts/material.min.js"></script>
   </body>
 </html>
