--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,3 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+<button type="button" class="btn btn-primary"> <a href="/admin">Add Admin</a> </button>
