--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,4 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<button type="button" class="btn btn-primary"> <a href="/admin">Add Admin</a> </button>
+<div class="jumbotron" style="background: rgba(5,255,21,0.11)">
+    <h1 align="center">I don't know how to do a nav menu</h1>
+    <p align="center">I Need To Write Something Proper Here</p>
+</div>
